--- a/css/style.css
+++ b/css/style.css
@@ -560,139 +560,146 @@ button:hover {
     padding: 10px 0;
 }
 
-/*FOOTER*/
+    /*FOOTER*/
 
-footer{
-    width: 100%;
-    background-color: rgba(15, 23, 42);
-}
+    footer{
+        width: 100%;
+        background-color: rgba(15, 23, 42);
+    }
 
-.textFooter{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 0 2%;
-    color: white;
-    padding: 20px 0;
-}
+    .textFooter{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 0 2%;
+        color: white;
+        padding: 20px 0;
+    }
 
-.textUp{
-    margin-bottom: 30px;
-}
+    .textUp{
+        margin-bottom: 30px;
+    }
 
-.pickingUp{
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
+    .pickingUp {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        color: white;
+    }
+    
+    .pickingUp p {
+        margin-bottom: 10px; 
+    }
+    
+    .pickingUp img {
+        width: 100%;
+        max-width: 137px;
+        margin: 5px;    
+    }
 
-.pickingUp img{
-    width: 100%;
-    max-width: 137px;
-}
+    .logosSolucoes img{
+        margin-right: 40px;
+    }
 
-.pickingUp p{
-    margin-left: 10px;
-}
+    .redes{
+        display: flex;
+        flex-direction: column;
+        margin: 80px 30px 0 30px;
+    }
 
-.redes{
-    display: flex;
-    flex-direction: column;
-    margin: 80px 30px 0 30px;
-}
+    .redes img{
+        width: 200px;
+    }
 
-.redes img{
-    width: 200px;
-}
+    .formContato{
+        padding: 0 20px;
+        margin-bottom: 30px;
+        color: white;
+    }
 
-.formContato{
-    padding: 0 20px;
-    margin-bottom: 30px;
-    color: white;
-}
+    .formContato h4{
+        margin: 10px 0;
+    }
 
-.formContato h4{
-    margin: 10px 0;
-}
+    .formContato form{
+        display: flex;
+        flex-direction: column;
+    }
 
-.formContato form{
-    display: flex;
-    flex-direction: column;
-}
+    .formContato form input[type=text]{
+        outline: none;
+        width: 330px;
+        padding: 5px 5px;
+        border-radius: 5px;
+        border: 0;
+        margin-bottom: 10px;  
+    }
 
-.formContato form input[type=text]{
-    outline: none;
-    width: 330px;
-    padding: 5px 5px;
-    border-radius: 5px;
-    border: 0;
-    margin-bottom: 10px;  
-}
+    .formContato form input[type=email]{
+        outline: none;
+        width: 330px;
+        padding: 5px 5px;
+        border-radius: 5px;
+        border: 0;
+        margin-bottom: 10px;  
+    }
 
-.formContato form input[type=email]{
-    outline: none;
-    width: 330px;
-    padding: 5px 5px;
-    border-radius: 5px;
-    border: 0;
-    margin-bottom: 10px;  
-}
+    .formContato form input[type=tel]{
+        outline: none;
+        width: 330px;
+        padding: 5px 5px;
+        border-radius: 5px;
+        border: 0;
+        margin-bottom: 10px;  
+    }
 
-.formContato form input[type=tel]{
-    outline: none;
-    width: 330px;
-    padding: 5px 5px;
-    border-radius: 5px;
-    border: 0;
-    margin-bottom: 10px;  
-}
+    .formContato form textarea{
+        outline: none;
+        width: 330px;
+        height: 100px;
+        padding: 5px 5px;
+        resize: vertical;
+        border-radius: 5px;
+        border: 0;
+        margin-bottom: 10px;  
+    }
 
-.formContato form textarea{
-    outline: none;
-    width: 330px;
-    height: 100px;
-    padding: 5px 5px;
-    resize: vertical;
-    border-radius: 5px;
-    border: 0;
-    margin-bottom: 10px;  
-}
+    .formContato form button{
+        width: 100px;
+        border-radius: 5px;
+        border: 0;
+        font-size: 17px;
+        background-color: white;
+        transition: 1.5s;
+    }
 
-.formContato form button{
-    width: 100px;
-    border-radius: 5px;
-    border: 0;
-    font-size: 17px;
-    background-color: white;
-    transition: 1.5s;
-}
+    .formContato form button:hover{
+        background-color: #5b5353;
+        border: 1px solid white;
+        color: white;
+    }
 
-.formContato form button:hover{
-    background-color: #5b5353;
-    border: 1px solid white;
-    color: white;
-}
+    .termos {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 30px;
+        padding: 10px 0;
+    }
 
-.termos {
-    width: 100%;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 30px;
-    padding: 10px 0;
-}
+    .termos p,
+    .termos a {
+        margin: 0 15px;
+        color: white;
+        text-decoration: none;
+    }
 
-.termos p,
-.termos a {
-    margin: 0 15px;
-    color: white;
-    text-decoration: none;
-}
-
-.termos a:hover {
-    text-decoration: underline;
-}
+    .termos a:hover {
+        text-decoration: underline;
+    }
 
 
 
