--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,111 @@ header{
     z-index: 2 !important;  
 }
 
+.banner-text {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
+.banner-text h2 {
+    color: white;
+    font-size: 30px;
+}
+
+.banner-text p {
+    font-size: 17px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    color: white;
+}
+
+.banner-text button {
+    width: 200px;
+    background-color: var(--corPrimaria);
+    border: 0;
+    padding: 5px 10px;
+    transition: 1.5s;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.banner-text button a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    font-weight: bold; 
+}
+
+.glider-prev, .glider-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.glider-prev {
+    left: 0;
+}
+
+.glider-next {
+    right: 0;
+}
+
+.dots {
+    text-align: center;
+    margin-top: -30px;
+}
+
+.dots button {
+    background: #ffffff;
+    border: none;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+.dots button.active {
+    background: #333;
+    opacity: 1;
+}
+
+/* #banner {
+    position: relative;
+    width: 100%;
+}
+
+.image-banner {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.image-banner img {
+    width: 100%;
+    height: 100%;
+}
+
+.banner-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    z-index: 2 !important;  
+}
+
 .banner-text{
     width: 35%;
     display: flex;
@@ -156,7 +261,7 @@ header{
     color: white;
     font-size: 18px;
     font-weight: bold; 
-}
+} */
 
 #solucao {
     width: 100%;
@@ -172,6 +277,7 @@ header{
 }
 
 .sbr{
+    width: 100%;
     margin-top: 30px;
     text-align: center;
     padding-bottom: 20px;
@@ -179,7 +285,8 @@ header{
 
 .sbr p{
     text-align: justify;
-    font-size: 20px;
+    font-size: 18px;
+    padding: 0 20px;
 }
 
 .sbr h3{
@@ -188,10 +295,18 @@ header{
     margin-bottom: 20px;
 }
 
+.sbr video{
+    width: 100%;
+    max-width: 700px;
+    margin: 30px auto;
+    border-radius: 10px;
+    border: 3px solid var(--corPrimaria);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .initialText {
     margin-top: 30px;
     text-align: center;
-    font-size: 20px;
 }
 
 .initialText h3{
@@ -202,6 +317,8 @@ header{
 
 .initialText p{
     text-align: justify;
+    font-size: 18px;
+    padding: 0 20px;
 }
 
 .imgFluxo{
@@ -212,6 +329,8 @@ header{
     width: 100%;
     max-width: 1000px;
 }
+
+
 
 #caracteristicas {
     width: 100%;
@@ -227,7 +346,7 @@ header{
 #caracteristicas h3 {
     font-size: 30px;
     color: var(--corPrimaria);
-    margin-bottom: 70px;
+    position: relative;
 }
 
 .imgCaracteristicas {
@@ -238,16 +357,19 @@ header{
     border-bottom: 1px solid var(--corPrimaria);
 }
 
+.iconCaracteristicas{
+    cursor: pointer;
+}
+
 .imgCaracteristicas .wraperImg {
     width: 30%;
     text-align: center;
     margin-bottom: 20px;
-    cursor: pointer;
 }
 
 .imgCaracteristicas .wraperImg p{
     font-size: 18px;
-}
+}   
 
 .imgCaracteristicas .wraperImg img {
     max-width: 100%;
@@ -261,6 +383,68 @@ header{
     border-radius: 10px;
     margin-top: 30px;
 }
+
+.cardsCaracterísticas .pCards{
+    text-align: justify;
+}
+
+.verTelas{
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+}
+
+.verTelas:hover{
+    background: transparent;
+}
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+    padding-top: 60px;
+    text-align: center;
+}
+
+.modal .telas {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border: 3px solid var(--corPrimaria);
+}
+
+.modal img {
+    width: 100%;
+    max-width: 1000px;
+    border: 2px solid var(--corPrimaria);
+    margin-bottom: 20px;
+}
+
+.closeBtn {
+    color: red;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.closeBtn:hover,
+.closeBtn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /*Mosaico */
 
 section.objetivos{
@@ -318,6 +502,7 @@ section.objetivos h3{
 
     color: black;
     font-size: 22px;
+    padding: 0 20px;
 }
 
 /* INTEGRAÇÃO */
@@ -550,6 +735,8 @@ button:hover {
     padding-bottom: 20px;
     margin-top: 20px    ;
     border-bottom: 2px solid var(--corPrimaria);
+    overflow: hidden;
+    position: relative;
 }
 
 .wraperBlogSistema h3{
@@ -572,16 +759,15 @@ button:hover {
 }
 
 .texto p{
+    font-size: 18px;
     margin: 20px 0;
-}
-
-.texto ul li b{
-    color: var(--corPrimaria);
+    padding: 0 20px;
 }
 
 .texto ul{
     padding: 0 15px;
-    list-style-type: decimal;
+    list-style-type: disc;
+    
 }
 
 .texto ul li{
@@ -743,10 +929,6 @@ button:hover {
     .banner-text{
         width: 50%;
     }
-    .banner-text h2 {
-        color: white;
-        font-size: 25px;
-    }
 
     .banner-text p {
         font-size: 16px;    
@@ -819,6 +1001,8 @@ button:hover {
         display: block;
         width: 100%;
         text-align: center;
+        overflow: hidden;
+        position: relative;
     }
 
     .item-1-mosaico{
@@ -874,10 +1058,6 @@ button:hover {
 
 @media screen and (max-width: 650px){
 
-    .banner-text h2 {
-        color: white;
-        font-size: 25px;
-    }
     
     .banner-text p {
         display: none;
@@ -908,11 +1088,6 @@ button:hover {
 }
 
 @media screen and (max-width: 450px){
-
-    .banner-text h2 {
-        color: white;
-        font-size: 21px;
-    }
 
     .wraperMaps .socialMedia {
         display: flex;
