--- a/css/style.css
+++ b/css/style.css
@@ -919,7 +919,7 @@ footer{
 /* PARCEIROS */
 
 .logoParceiros {
-    margin: 100px;
+    margin: 80px;
 }
 
 .logoParceiros h3 {
@@ -933,17 +933,19 @@ footer{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 15px;
 }
 
 .logoParceiros .boxImg {
-    flex: 0 0 45%; 
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 15px;
 }
 
 .logoParceiros .boxImg img {
     width: 100%;
+    height: 100%;
     max-width: 300px;
     border: 2px solid var(--corPrimaria);
     border-radius: 5px;
